--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,10 +5,6 @@
         <strong>Credits</strong>
         <table class="table table-sm">
           <tr>
-            <td>Main Director:</td>
-            <td><a href="szhshp.org">Szhshp</a></td>
-          </tr>
-          <tr>
             <td>Dev Engine:</td>
             <td>Ruby x Jekyll</td>
           </tr>
@@ -20,15 +16,25 @@
               <td>Co-Vi Director</td>
               <td>Stylish Portfolio</td>
             </tr>
+          <tr>
+            <td>Friend Links:</td>
+            <td><a href="themeiwu.com"> onemoretime.me</a></td>
+          </tr>
           </table>
           <p class="text-muted">Copyright &copy; {{ site.copyright }} 20{{ site.time | date: '%y' }}</p>
         </div>
 
         <div class="col-md-6">
-          <strong>Friend Links</strong>
+          <strong>Themeiwu's Message Wall</strong>
           <table class="table table-sm">
             <tr>
-              <td><a href="http://szhshp.org"> szhshp.org</a></td>
+              <td>宇宙中的速度有极限，所以我们看到的是四分钟前的阳光和1500年前的猎户星座。</td>
+            </tr>
+          </table>
+          <strong>Follow me by:</strong>
+          <table class="table table-sm">
+            <tr>
+              <td>好像没啥可follow的。。。</td>
             </tr>
           </table>
         </div>
