--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <div class="container w-100 font-weight-bold">
     <div class="row">
       <div class="col-md-6">
-        <strong>Credits</strong>
+        <strong>Dev&Material</strong>
         <table class="table table-sm">
           <tr>
             <td>Dev Engine:</td>
@@ -18,18 +18,19 @@
             </tr>
           <tr>
             <td>Friend Links:</td>
-            <td><a href="themeiwu.com"> onemoretime.me</a></td>
+            <td><a href="hubblesite.org"> hubblesite</a></td>
           </tr>
           </table>
-          <p class="text-muted">Copyright &copy; {{ site.copyright }} 20{{ site.time | date: '%y' }}</p>
+          <p class="text-muted">Copyright &copy; {{ site.copyright }} 20{{ site.time | date: '%y' }}themeiwu.com</p>
         </div>
 
         <div class="col-md-6">
-          <strong>Themeiwu's Message Wall</strong>
+          <strong>Contact me:</strong>
           <table class="table table-sm">
             <tr>
-              <td>宇宙中的速度有极限，所以我们看到的是四分钟前的阳光和1500年前的猎户星座。</td>
-            </tr>
+            <td>Mail:</td>
+            <td><a href="themeiwu@hotmail.com"> themeiwu</a></td>
+          </tr>
           </table>
           <strong>Follow me by:</strong>
           <table class="table table-sm">
