--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
             </tr>
           <tr>
             <td>Friend Links:</td>
-            <td><a href="hubblesite.org"> hubblesite</a></td>
+            <td><a href="http://hubblesite.org"> hubblesite</a></td>
           </tr>
           </table>
           <p class="text-muted">Copyright &copy; {{ site.copyright }} 20{{ site.time | date: '%y' }}themeiwu.com</p>
@@ -29,7 +29,7 @@
           <table class="table table-sm">
             <tr>
             <td>Mail:</td>
-            <td><a href="themeiwu@hotmail.com"> themeiwu</a></td>
+            <td><a href="mailto:themeiwu@hotmail.com"> themeiwu</a></td>
           </tr>
           </table>
           <strong>Follow me by:</strong>
