--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
             <td><a href="http://hubblesite.org"> hubblesite</a></td>
           </tr>
           </table>
-          <p class="text-muted">Copyright &copy; {{ site.copyright }} 20{{ site.time | date: '%y' }}themeiwu.com</p>
+          <p class="text-muted">Copyright &copy; ©20{{ site.time | date: '%y' }}themeiwu.com</p>
         </div>
 
         <div class="col-md-6">
