--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,19 +25,20 @@
         </div>
 
         <div class="col-md-6">
-          <strong>Contact me:</strong>
+          <strong>Contact With</strong>
           <table class="table table-sm">
             <tr>
             <td>Mail:</td>
             <td><a href="mailto:themeiwu@hotmail.com"> themeiwu</a></td>
           </tr>
-          </table>
-          <strong>Follow me by:</strong>
-          <table class="table table-sm">
+          <tr>
+            <td>网易云:</td>
+              <td><a href="https://music.163.com/#/user/home?id=78563955"> themeiwu</a></td>
+          </tr>
             <tr>
-              <td>好像没啥可follow的。。。</td>
-            </tr>
-          </table>
+            <td>Ins:</td>
+            <td>@themeiwu</td>
+          </tr>
         </div>
 
       </div>
