--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,14 +31,15 @@
             <td>Mail:</td>
             <td><a href="mailto:themeiwu@hotmail.com"> themeiwu</a></td>
           </tr>
+            <tr>
+            <td>Blogger:</td>
+            <td><a href="https://themeiwu.blogspot.com/"> 来自华北平原的孩子</a></td>
+          </tr>
           <tr>
             <td>网易云:</td>
               <td><a href="https://music.163.com/#/user/home?id=78563955"> themeiwu</a></td>
           </tr>
-            <tr>
-            <td>Ins:</td>
-            <td>@themeiwu</td>
-          </tr>
+            
         </div>
 
       </div>
