--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,6 +35,7 @@
             <td>Blogger:</td>
             <td><a href="https://themeiwu.blogspot.com/"> 来自华北平原的孩子</a></td>
           </tr>
+            <tr><td><a target="_blank" href="https://www.zhihu.com/people/xiao-xin-45-93/">知乎</a></td></tr>
           <tr>
             <td>网易云:</td>
               <td><a href="https://music.163.com/#/user/home?id=78563955"> themeiwu</a></td>
