--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,20 +26,11 @@
 
         <div class="col-md-6">
           <strong>Contact With</strong>
-          <table class="table table-sm">
-            <tr>
-            <td>Mail:</td>
-            <td><a href="mailto:themeiwu@hotmail.com"> themeiwu</a></td>
-          </tr>
-            <tr>
-            <td>Blogger:</td>
-            <td><a href="https://themeiwu.blogspot.com/"> 来自华北平原的孩子</a></td>
-          </tr>
+          <table class="table table-sm text-center">
+            <tr><td><a target="_blank" href="mailto:themeiwu@hotmail.com">Mail</a></td></tr>
+            <tr><td><a target="_blank" href="https://themeiwu.blogspot.com/">Blogger</a></td></tr>
             <tr><td><a target="_blank" href="https://www.zhihu.com/people/xiao-xin-45-93/">知乎</a></td></tr>
-          <tr>
-            <td>网易云:</td>
-              <td><a href="https://music.163.com/#/user/home?id=78563955"> themeiwu</a></td>
-          </tr>
+            <tr><td><a target="_blank" href="https://music.163.com/#/user/home?id=78563955">网易云音乐</a></td></tr>
             
         </div>
 
