--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,6 +29,7 @@
           <table class="table table-sm text-center">
             <tr><td><a target="_blank" href="mailto:themeiwu@hotmail.com">Mail</a></td></tr>
             <tr><td><a target="_blank" href="https://themeiwu.blogspot.com/">Blogger</a></td></tr>
+             <tr><td><a target="_blank" href="https://www.instagram.com/jooewooo/">Instagram</a></td></tr>
             <tr><td><a target="_blank" href="https://www.zhihu.com/people/xiao-xin-45-93/">知乎</a></td></tr>
             <tr><td><a target="_blank" href="https://music.163.com/#/user/home?id=78563955">网易云音乐</a></td></tr>
             
