--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,30 +2,19 @@
   <div class="container w-100 font-weight-bold">
     <div class="row">
       <div class="col-md-6">
-        <strong>Dev&Material</strong>
+        <strong>CREDITS</strong>
         <table class="table table-sm">
-          <tr>
-            <td>Dev Engine:</td>
-            <td>Ruby x Jekyll</td>
-          </tr>
-            <tr>
-              <td>Vi Director:</td>
-              <td>Bootstrap</td>
-            </tr>
-            <tr>
-              <td>Co-Vi Director</td>
-              <td>Stylish Portfolio</td>
-            </tr>
-          <tr>
-            <td>Friend Links:</td>
-            <td><a href="http://hubblesite.org"> hubblesite</a></td>
-          </tr>
-          </table>
+          <tr><td>Dev Engine:</td><td>Ruby x Jekyll</td></tr>
+          <tr><td>Vi Director:</td><td>Bootstrap</td></tr>   
+          <tr><td>Co-Vi Director:</td><td>Stylish Portfolio</td></tr>
+          <tr><td>Special Thaks:</td><td>@szhshp</td></tr>
+          <tr><td>Friend Links:</td><td><a href="http://hubblesite.org"> hubblesite</a></td></tr>  
+        </table>
           <p class="text-muted">Copyright &copy; {{ site.copyright }} 20{{ site.time | date: '%y' }}themeiwu.com</p>
         </div>
 
         <div class="col-md-6">
-          <strong>Contact With</strong>
+          <strong>CONTACT</strong>
           <table class="table table-sm text-center">
             <tr><td><a target="_blank" href="mailto:themeiwu@hotmail.com">Mail</a></td></tr>
             <tr><td><a target="_blank" href="https://themeiwu.blogspot.com/">Blogger</a></td></tr>
