--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,10 +4,10 @@
       <div class="col-md-6">
         <strong>CREDITS</strong>
         <table class="table table-sm">
-          <tr><td>Dev Engine:</td><td>Ruby x Jekyll</td></tr>
+          <tr><td>Dev Engine:</td><td>Ruby X Git</td></tr>
           <tr><td>Vi Director:</td><td>Bootstrap</td></tr>   
           <tr><td>Co-Vi Director:</td><td>Stylish Portfolio</td></tr>
-          <tr><td>Special Thaks:</td><td>@szhshp</td></tr>
+          <tr><td>Special Thanks:</td><td>@szhshp</td></tr>
           <tr><td>Friend Links:</td><td><a href="http://hubblesite.org"> hubblesite</a></td></tr>  
         </table>
           <p class="text-muted">Copyright &copy; {{ site.copyright }} 20{{ site.time | date: '%y' }}themeiwu.com</p>
