--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -6,7 +6,7 @@
     <title>{{site.title}}</title>
 
     {% include global-css.html %}
-
+    <link href="{{site.url}}{{site.baseurl}}/img/111.ico" rel="SHORTCUT ICON" />
 </head>
 <body>
 
