--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -8,7 +8,7 @@
     {% include global-css.html %}
 
     <link href="{{site.url}}{{site.baseurl}}/css/categories.css" rel='stylesheet' type='text/css'/>
-
+    <link href="{{site.url}}{{site.baseurl}}/img/111.ico" rel="SHORTCUT ICON" />
 </head>
 <body>
 
