--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,7 @@
     <link href="{{site.url}}{{site.baseurl}}/css/md-post-header-collapse.css" rel='stylesheet' type="text/css"/>
     <link href="{{site.url}}{{site.baseurl}}/css/toc.css" rel='stylesheet' type="text/css"/>
     <link href="{{site.url}}{{site.baseurl}}/css/lightbox.min.css" rel='stylesheet' type="text/css"/>
-
+    <link href="{{site.url}}{{site.baseurl}}/img/111.ico" rel="SHORTCUT ICON" />
 </head>
 <body>
 
