--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,5 @@
 <div class="jumbotron text-center font-weight-bold" id="jumbotron"  style="background: url({{site.url}}{{site.baseurl}}/img/bg.jpg) no-repeat scroll;background-size: cover;">	
 	<p class="text-white text-center display-3" >Aloha</p>
-	<p class="lead">
-		<a class="btn btn-secondary" href="intro/2017/02/05/helloworld.html" role="button">Recent Content</a>   
-	</p>
+	<p class="text-white text-center display-4" >Mr.Kafkas'Singular Spot of Life(Edition Alpha)</p>
 	
 </div>
