--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <div class="jumbotron text-center font-weight-bold" id="jumbotron"  style="background: url({{site.url}}{{site.baseurl}}/img/bg.jpg) no-repeat scroll;background-size: cover;">	
 	<p class="text-white text-center display-3" >Aloha :)</p>	
-	<p class="text-white text-center display-4" >Welcome To Mr.Kafkas'Singular Spot™ of Life</p>
+	<p class="text-white text-center display-4" >Welcome To Mr.Kafkas'Singular Spot™</p>
 	<p class="text-white text-center" >(Edition Alpha)</p>
 </div>
