--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
-<div class="jumbotron text-center font-weight-bold" id="jumbotron"  style="background: url({{site.url}}{{site.baseurl}}/img/bg.jpg) no-repeat scroll;background-size: cover;">	
-	<p class="text-white text-center display-2" >Aloha</p>	
-	<p class="text-white text-center display-4" >Welcome To Mr.Kafkas'Singular Spot</p>
+<div class="jumbotron text-center font-weight-bold text-white" id="jumbotron"  style="background: url({{site.url}}{{site.baseurl}}/img/bg.jpg) no-repeat scroll;background-size: cover;">	
+	<p class="text-white text-center display-3" >Aloha</p>	
+	<h2>Welcome To Mr.Kafkas'Singular Spot</h2>
 	<p class="text-white text-center" >(Edition Alpha)</p>
 </div>
