--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,3 @@
-<div class="jumbotron text-center font-weight-bold m-auto" id="jumbotron"  style="background: url({{site.url}}{{site.baseurl}}/img/bg.jpg) no-repeat scroll;background-size: cover;">	
+<div class="jumbotron text-center font-weight-bold row align-items-centerjustify-content-center" id="jumbotron"  style="background: url({{site.url}}{{site.baseurl}}/img/bg.jpg) no-repeat scroll;background-size: cover;">	
 	<p class="text-white m-auto text-center display-3" >Aloha</p>	
 </div>
