--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,3 @@
-<div class="jumbotron text-center font-weight-bold align-items-centerjustify-content-center" id="jumbotron"  style="background: url({{site.url}}{{site.baseurl}}/img/bg.jpg) no-repeat scroll;background-size: cover;">	
-	<p class="text-white text-center display-3 align-items-centerjustify-content-center" >Aloha</p>	
+<div class="jumbotron text-center font-weight-bold" id="jumbotron"  style="background: url({{site.url}}{{site.baseurl}}/img/bg.jpg) no-repeat scroll;background-size: cover;">	
+	<p class="text-white text-center display-3 row align-items-centerjustify-content-center" >Aloha</p>	
 </div>
