--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <div class="jumbotron text-center font-weight-bold" id="jumbotron"  style="background: url({{site.url}}{{site.baseurl}}/img/bg.jpg) no-repeat scroll;background-size: cover;">	
 	
-	<th style="vertical-align: middle !important;text-align: center;">xxx</th>
-        <td style="vertical-align: middle !important;text-align: center;">xxx</td>
+	<p class="display-3 text-white">Aloha</p>
+	<p class="display-3 text-white">你好</p>
 </div>
