--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -14,7 +14,7 @@
         <div class="tab-content" id=tab-content>
             <div class="tab-pane text-sm-center active" id="sidebar-home-content">
                 <img class="site-author-image m-2" itemprop="image" src="{{site.url}}{{site.baseurl}}/img/headshot.png">
-                <div class="text-warning">themeiwu</div>
+                <div class="text-warning">Mr.Kafka</div>
                 {% include nav-links.html %}
             </div>
             <div class="tab-pane fade text-sm-left" id="sidebar-toc-content">
