--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,3 +3,9 @@
 	<p class="display-3 text-white">Aloha</p>
 	<p class="display-3 text-white">你好</p>
 </div>
+
+<div class="jumbotron text-center font-weight-bold" id="jumbotron"  style="background: url({{site.url}}{{site.baseurl}}/img/bg2.jpg) no-repeat scroll;background-size: cover;">	
+	
+	<p class="display-3 text-white">Aloha</p>
+	<p class="display-3 text-white">你好</p>
+</div>
