--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <div class="jumbotron font-weight-bold" id="jumbotron"  style="background: url({{site.url}}{{site.baseurl}}/img/bg.jpg) no-repeat scroll;background-size: cover;">	
 	
-	<p class="display-4 text-white">卡夫卡先生的生活奇点</p>
+	<p class="display-4 text-white">Mr.Kafkas'Singular Spot-Edition Alpha</p>
 	
 </div>
