--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 
-<div class="d-flex flex-column font-weight-bold jumbotron justify-content-center" id="jumbotron"> 
+<div class="d-flex flex-column font-weight-bold jumbotron justify-content-center" id="jumbotron" style="background: url({{site.url}}{{site.baseurl}}/img/bg.jpg) no-repeat scroll;background-size: cover;> 
 	<p class="text-white animated fadeInDown h5">Szhshp's</p>
 	<p class="h1 text-white animated fadeInDown">Code-3 Limbic Laboratory</p>
 	<p class="text-white animated fadeInDown h5 font-weight-bold" id="main-title">szhshp的第三边境研究所</p>
