--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,13 +1,11 @@
 
 <div class="d-flex flex-column font-weight-bold jumbotron justify-content-center" id="jumbotron" style="background: url({{site.url}}{{site.baseurl}}/img/bg.jpg) no-repeat scroll;background-size: cover;> 
-	<p class="text-white animated fadeInDown h5">Szhshp's</p>
-	<p class="h1 text-white animated fadeInDown">Code-3 Limbic Laboratory</p>
-	<p class="text-white animated fadeInDown h5 font-weight-bold" id="main-title">szhshp的第三边境研究所</p>
+	<p class="h1 text-white animated fadeInDown">Mr.Kafka's Singular Spot</p>
+	<p class="text-white animated fadeInDown h5 font-weight-bold" id="main-title">Kafka先生的生活奇点</p>
 
 	<p class="lead">
-		<a class="btn-sm btn-primary animated fadeInLeft" href="about.html#archivelist" role="button">What's New?</a>   
-		<a class="btn-sm btn-light animated fadeInLeft" href="#archivelist" role="button">Archives</a>   
-		<a class="btn-sm btn-light animated fadeInRight" href="comics.html" role="button">Comics</a>   
+		<a class="btn-sm btn-primary animated fadeInLeft" href="about.html#archivelist" role="button">Alpha Lab</a>   
+		<a class="btn-sm btn-light animated fadeInLeft" href="#archivelist" role="button">All Spot</a>   
 	</p>
 	<p id="sentence_of_the_day" class="text-white h6 animated fadeInUp">Trust is the easiest thing in the world to lose,and the hardest thing in the world to get back.</p>
 </div>
