--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 
 <div class="d-flex flex-column font-weight-bold jumbotron justify-content-center" id="jumbotron" style="background: url({{site.url}}{{site.baseurl}}/img/bg.jpg) no-repeat scroll;background-size: cover;> 
-	<p class="h1 text-white animated fadeInDown">Mr.Kafka's Singular Spot</p>
+	<p class="h1 text-white animated font-weight-bold fadeInDown">Mr.Kafka's Singular Spot</p>
 	<p class="text-white animated fadeInDown h5 font-weight-bold" id="main-title">Kafka先生的生活奇点</p>
 
 	<p class="lead">
