--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 
-<div class="d-flex flex-column font-weight-bold jumbotron justify-content-center" id="jumbotron" style="background: url({{site.url}}{{site.baseurl}}/img/bg.jpg) no-repeat scroll;background-size: cover;> <p class="display-4 text-white">Project Gaia</p>
+<div class="d-flex flex-column font-weight-bold jumbotron justify-content-center" id="jumbotron" style="background: url({{site.url}}{{site.baseurl}}/img/bg.jpg) no-repeat scroll;background-size: cover;>
 	<p class="display-4 text-white">Mr.Kafka's Singular Spot</p>
-	<p class="text-white animated fadeInDown h5 font-weight-bold" id="main-title">Kafka先生的生活奇点</p>
+	<p class="text-white animated fadeInDown h3 font-weight-bold" id="main-title">Kafka先生的生活奇点</p>
 
 	<p class="lead">
 		<a class="btn-sm btn-primary animated fadeInLeft" href="about.html#archivelist" role="button">Alpha Lab</a>     
