--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 
-<div class="d-flex flex-column font-weight-bold jumbotron justify-content-center" id="jumbotron" style="background: url({{site.url}}{{site.baseurl}}/img/bg.jpg) no-repeat scroll;background-size: cover;>
+<div class="d-flex flex-column text-white font-weight-bold jumbotron justify-content-center" id="jumbotron" style="background: url({{site.url}}{{site.baseurl}}/img/bg.jpg) no-repeat scroll;background-size: cover;>
 	<p class="display-4 text-white"> Mr.Kafka's Singular Spot </p>
 	<p class="text-white animated font-weight-bold display-5">Kafka先生的生活奇点</p>
 
