--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <div class="d-flex flex-column text-white font-weight-bold jumbotron justify-content-center" id="jumbotron" style="background: url({{site.url}}{{site.baseurl}}/img/bg.jpg) no-repeat scroll;background-size: cover;">
 	
-        <p class="text-white animated font-weight-bold display-4">Kafka先生的生活奇点</p>
-	 <p class="display-4 animated font-weight-bold"> Mr.Kafka's Singular Spot </p>
+        <p class="display-4 animated">Kafka先生的生活奇点</p>
+	<p class="display-4 animated font-weight-bold"> Mr.Kafka's Singular Spot </p>
 	
 
 	<p class="lead">
