--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
 	
 
 	<p class="lead">
-		<a class="btn-sm btn-primary animated fadeInLeft" href="about.html#archivelist" role="button">Alpha Lab</a>     
+		<a class="btn-sm btn-primary animated fadeInLeft h1" href="about.html#archivelist" role="button">Alpha Lab</a>     
 	</p>
 	<p id="sentence_of_the_day" class="text-white h6 animated fadeInUp">Trust is the easiest thing in the world to lose,and the hardest thing in the world to get back.</p>
 </div>
