--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,5 +8,5 @@
 	<p class="lead">
 		<a class="btn-sm btn-primary animated fadeInLeft h1" href="about.html#archivelist" role="button">Alpha Lab</a>     
 	</p>
-	<p id="sentence_of_the_day" class="text-white h6 animated fadeInUp">Trust is the easiest thing in the world to lose,and the hardest thing in the world to get back.</p>
+	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp"> The Orion Nebula is 1500 light years from us,when people looking up to starlight,we are seeing the light from 1500 years ago</p>
 </div>
