--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
           <tr><td>Vi Director:</td><td>Bootstrap</td></tr>   
           <tr><td>Co-Vi Director:</td><td>Stylish Portfolio</td></tr>
           <tr><td>Special Thanks:</td><td>@szhshp</td></tr>
-          <tr><td>Friend Links:</td><td><a href="http://hubblesite.org"> hubblesite</a></td></tr>  
+          <tr><td>Background From:</td><td><a href="http://hubblesite.org"> hubblesite</a></td></tr>  
         </table>
           <p class="text-muted">Copyright &copy; {{ site.copyright }} 20{{ site.time | date: '%y' }}themeiwu.com</p>
         </div>
