--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,5 +9,5 @@
 		<a class="btn-sm btn-primary animated fadeInLeft h1" href="about.html#archivelist" role="button">Alpha Lab</a>     
 	</p>
 	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp"> The <a target="_blank" href="https://baidu.com">Orion Nebula</a> is 1500 light years from us,when people looking for starlights,they are seeing the message which sent from 1500 years ago.</p>
-        <p id="sentence_of_the_day" class="text-white h5 animated fadeInUp">利物浦赢得了欧冠，我还是很高兴的！</p>
+        <p id="sentence_of_the_day" class="text-white h5 animated fadeInUp">很高兴利物浦赢了欧冠，下赛季加油:)</p>
 </div>
