--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 	
         <p class="h2 animated">Kafka</p>
 	<p class="h1 animated">先生的生活奇点</p>
-	<p class="display-4 animated"> Mr.Kafka's Singular Spot </p>
+	<p class="display-4 animated"> Mr.Kafka's Singular Point </p>
 	
 
 	<p class="lead">
