--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,13 +2,13 @@
 	
         <p class="h2 animated">Kafka</p>
 	<p class="h2 animated">先生的生活奇点</p>
-	<p class="h1 animated"> Mr.Kafka's Singular Point </p>
+	<p class="display-4 animated"> Mr.Kafka's Singular Point </p>
 	
 
 	<p class="lead">
 		<a class="btn-sm btn-primary animated fadeInLeft h1" href="about.html#archivelist" role="button">Alpha Lab</a>     
 	</p>
-	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp"> The <a target="_blank" href="https://baidu.com">Orion Nebula</a> is distance 1500 light years from us,when people looking for the starlights,they are catching the message which sent from 1500 years ago.</p>
-        <p id="sentence_of_the_day" class="text-white h5 animated fadeInUp">And...
-	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp">很高兴利物浦赢了欧冠，下赛季加油:)</p>
+	<p id="sentence_of_the_day" class="text-white h6 animated fadeInUp"> The <a target="_blank" href="https://baidu.com">Orion Nebula</a> is distance 1500 light years from us,when people looking for the starlights,they are catching the message which sent from 1500 years ago.</p>
+        <p id="sentence_of_the_day" class="text-white h6 animated fadeInUp">And...
+	<p id="sentence_of_the_day" class="text-white h6 animated fadeInUp">很高兴利物浦赢了欧冠，下赛季加油:)</p>
 </div>
