--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <div class="d-flex flex-column text-white jumbotron justify-content-center" id="jumbotron" style="background: url({{site.url}}{{site.baseurl}}/img/bg.jpg) no-repeat scroll;background-size: cover;">
 	
-        <p class="h2 animated">Kafka</p>
-	<p class="h2 animated">先生的生活奇点</p>
+        <p class="h2 animated">Aloha</p>
+	<p class="h2 animated">Welcone To</p>
 	<p class="display-4 animated"> Mr.Kafka's Singular Point </p>
 	
 
