--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <div class="d-flex flex-column text-white jumbotron justify-content-center" id="jumbotron" style="background: url({{site.url}}{{site.baseurl}}/img/bg.jpg) no-repeat scroll;background-size: cover;">     
 	<p class="display-4 animated"> Mr.Kafka's Singular Point </p>
 	<p class="lead">
-		<a class="btn-sm btn-primary animated fadeInLeft h1" href="about.html#archivelist" role="button">Alpha Lab</a>     
+		<a class="btn-sm btn-primary animated fadeInLeft" href="about.html#archivelist" role="button">Alpha Lab</a>     
 	</p>
 	<p id="sentence_of_the_day" class="text-white h6 animated fadeInUp"> The <a target="_blank" href="https://baidu.com">Orion Nebula</a> is distance 1500 light years from us,when people looking for the starlights,they are in fact catching the message which sent from 1500 years ago.</p>
         <p id="sentence_of_the_day" class="text-white h6 animated fadeInUp">And
