--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
           <tr><td>Framework From:</td><td>@szhshp</td></tr>
           <tr><td>Background From:</td><td><a href="http://hubblesite.org"> hubblesite</a></td></tr>  
         </table>
-          <p class="text-muted">Copyright &copy; {{ site.copyright }} 20{{ site.time | date: '%y' }}</p>
+         
         </div>
 
         <div class="col-md-6">
@@ -23,7 +23,7 @@
             <tr><td><a target="_blank" href="https://music.163.com/#/user/home?id=78563955">网易云音乐</a></td></tr>
             
         </div>
-
+ <div><p class="text-muted">Copyright &copy; {{ site.copyright }} 20{{ site.time | date: '%y' }}</p></div>
       </div>
     </div>  
   </footer>
