--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
           <tr><td>Framework From:</td><td>@szhshp</td></tr>
           <tr><td>Background From:</td><td><a href="http://hubblesite.org"> hubblesite</a></td></tr>  
         </table>
-         
+         <p class="text-muted">Copyright &copy; {{ site.copyright }} 20{{ site.time | date: '%y' }}</p>
         </div>
 
         <div class="col-md-6">
@@ -26,5 +26,5 @@
       </div>
       
     </div>  
-    <div><p class="text-muted">Copyright &copy; {{ site.copyright }} 20{{ site.time | date: '%y' }}</p></div>
+    
   </footer>
