--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,8 @@
 	<p class="lead">
 		<a class="btn-sm btn-primary animated fadeInLeft" href="about.html#archivelist" role="button">Alpha Lab</a>     
 	</p>
-	<p id="sentence_of_the_day" class="text-white h6 animated fadeInUp"> The <a target="_blank" href="https://www.conservapedia.com/index.php?title=Orion_nebula">Orion Nebula</a> is distance 1300 light years from us,when people looking for the starlights,they are in fact catching the message which sent from 1000 years ago.</p>
-        <p id="sentence_of_the_day" class="text-white h6 animated fadeInUp">And
+	<p id="sentence_of_the_day" class="text-white h6 animated fadeInUp"> The <a target="_blank" href="https://www.conservapedia.com/index.php?title=Orion_nebula">Orion Nebula</a> is distance 1300 light years from us.</p>
+        <p id="sentence_of_the_day" class="text-white h6 animated fadeInUp">when people looking for the starlights,they are in fact catching the message which sent from 1000 years ago.</p>
+	<p id="sentence_of_the_day" class="text-white h6 animated fadeInUp">And
 	<p id="sentence_of_the_day" class="text-white h6 animated fadeInUp">很高兴利物浦赢了欧冠，下赛季加油喔 : )</p>
 </div>
