--- a/_includes/comment-full.html
+++ b/_includes/comment-full.html
@@ -9,7 +9,7 @@
           
           (function() { // DON'T EDIT BELOW THIS LINE
           var d = document, s = d.createElement('script');
-          s.src = 'https://szhshp.disqus.com/embed.js';
+          s.src = 'https://themeiwu.disqus.com/embed.js';
           s.setAttribute('data-timestamp', +new Date());
           (d.head || d.body).appendChild(s);
           })();
