--- a/_includes/comment-full.html
+++ b/_includes/comment-full.html
@@ -3,8 +3,8 @@
         <div id="disqus_thread"></div>
         <script>
           var disqus_config = function () {
-            this.page.url = '';  
-            this.page.identifier = '';
+            this.page.url = '{{site.url}}{{site.baseurl}}/';  
+            this.page.identifier = '/';
           };
           
           (function() { // DON'T EDIT BELOW THIS LINE
@@ -17,3 +17,4 @@
         <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     </div>
 </div>
+                                        
