--- a/_includes/comment-full.html
+++ b/_includes/comment-full.html
@@ -4,7 +4,7 @@
         <script>
           var disqus_config = function () {
             this.page.url = '{{site.url}}{{site.baseurl}}/';  
-            this.page.identifier = '/';
+            this.page.identifier = '';
           };
           
           (function() { // DON'T EDIT BELOW THIS LINE
