--- a/_includes/comment-full.html
+++ b/_includes/comment-full.html
@@ -3,7 +3,7 @@
         <div id="disqus_thread"></div>
         <script>
           var disqus_config = function () {
-            this.page.url = '{{site.url}}{{site.baseurl}}/';  
+            this.page.url = '';  
             this.page.identifier = '';
           };
           
