--- a/_includes/comment-full.html
+++ b/_includes/comment-full.html
@@ -3,8 +3,8 @@
         <div id="disqus_thread"></div>
         <script>
           var disqus_config = function () {
-            this.page.url = '';  
-            this.page.identifier = '';
+            this.page.url = window.location.href.replace('localhost:4000','themeiwu.com');;  
+            this.page.identifier = window.location.href.replace('localhost:4000','themeiwu.com');
           };
           
           (function() { // DON'T EDIT BELOW THIS LINE
