--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,5 +7,5 @@
         <p id="sentence_of_the_day" class="text-white h6 animated fadeInUp">when people looking for the starlights,they are in fact catching the message which sent from 1000 years ago.</p>
 	<p id="sentence_of_the_day" class="text-white h6 animated fadeInUp">And
 	<p id="sentence_of_the_day" class="text-white h6 animated fadeInUp">很高兴利物浦赢了欧冠，下赛季加油喔 : )</p>
-	<div style="position:fixed; bottom:0px; width:100%; text-align:center;"><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=1091088&auto=1&height=66"></iframe></div>
+	<div style="position:absolute; bottom:0px; width:100%; text-align:right;"><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=1091088&auto=1&height=66"></iframe></div>
 </div>
