--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,10 +3,10 @@
 	<p class="display-4 animated"> Mr.Kafka's Singular Point </p>
 	<p class="lead">
 		<a class="btn-sm btn-primary animated fadeInLeft" href="about.html#archivelist" role="button">Alpha Lab</a>     
-	</p><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=200 height=53 src="//music.163.com/outchain/player?type=2&id=1091088&auto=1&height=66"></iframe>
+	<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=200 height=53 src="//music.163.com/outchain/player?type=2&id=1091088&auto=1&height=50"></iframe>
 	<p id="sentence_of_the_day" class="text-white h6 animated fadeInUp"> The <a target="_blank" href="https://www.conservapedia.com/index.php?title=Orion_nebula">Orion Nebula</a> is distance 1300 light years from us.</p>
         <p id="sentence_of_the_day" class="text-white h6 animated fadeInUp">when people looking for the starlights,they are in fact catching the message which sent from 1000 years ago.</p>
-	<p id="sentence_of_the_day" class="text-white h6 animated fadeInUp">And
+	<p id="sentence_of_the_day" class="text-white h6 animated fadeInUp">And</p>
 	<p id="sentence_of_the_day" class="text-white h6 animated fadeInUp">很高兴利物浦赢了欧冠，下赛季加油喔 : )</p>
 	
 </div>
