--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,5 +2,5 @@
 	
 	<p class="display-4 animated"> Mr.Kafka's Singular Point </p>  
 	
-	<audio autoplay="autoplay"> <source = src="//music.163.com/outchain/player?type=2&id=1091088&auto=1&height=66" type="audio/mp3"> </audio>
+	<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=280 height=52 src="//music.163.com/outchain/player?type=2&id=1091088&auto=1&height=32"></iframe>
 </div>
