--- a/_includes/archives.html
+++ b/_includes/archives.html
@@ -4,7 +4,7 @@
                 <div class="row">
                     <div class="col-md-8 col-sm-12">
                         <div class="page-header" id="archives">
-                            <h3 class="d-inline">所有</h3>
+                            <h3 class="d-inline">Alpha Lab</h3>
                             <input type="text" class="d-inline form-control ml-3 w-50" id="post-search" placeholder="Press enter to search..." autocomplete="off">
                         </div>
                         <ul class="ant-timeline" id="archivelist">
@@ -50,11 +50,11 @@
                     </div>
                     <div class="col-md-4 col-sm-12">
                         <div class="page-header" id="archives">
-                            <h4>音乐</h4>
+                            <h4>这就是生活</h4>
                         </div>
                         <p>waitting.......</p>
                         <div class="page-header" id="archives">
-                            <h4>技术</h4>
+                            <h4>技术是什么</h4>
                         </div>
                         <p>waitting.......</p>
                     </div>
