--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,8 @@
       <div class="col-md-6">
         <strong>CREDITS</strong>
         <table class="table table-sm">
-          <tr><td>Dev Engine:</td><td>Ruby X Git</td></tr>
-          <tr><td>Vi Director:</td><td>Bootstrap</td></tr>   
+          <tr><td>Dev Engine:</td><td>Ruby X GitHub</td></tr>
+          <tr><td>Vi Director:</td><td>Bootstrap4</td></tr>   
           <tr><td>Co-Vi Director:</td><td>Stylish Portfolio</td></tr>
           <tr><td>Framework From:</td><td>@szhshp</td></tr>
           <tr><td>Background From:</td><td><a href="http://hubblesite.org"> hubblesite</a></td></tr>  
