--- a/_includes/archives.html
+++ b/_includes/archives.html
@@ -52,11 +52,11 @@
                         <div class="page-header" id="archives">
                             <h4>这就是生活</h4>
                         </div>
-                        <p>waitting.......</p>
+                        <p>C'est La Vie</p>
                         <div class="page-header" id="archives">
                             <h4>技术是什么</h4>
                         </div>
-                        <p>waitting.......</p>
+                        <p>可以吃吗。。。</p>
                     </div>
             </div>
         </div>
