--- a/_includes/archives.html
+++ b/_includes/archives.html
@@ -52,7 +52,7 @@
                         <div class="page-header" id="archives">
                             <h4>这就是生活</h4>
                         </div>
-                        <p>Of course,C'est La Vie!</p>
+                        <p>C' est La Vie!</p>
                         <div class="page-header" id="archives">
                             <h4>技术是什么</h4>
                         </div>
