--- a/_includes/archives.html
+++ b/_includes/archives.html
@@ -56,7 +56,7 @@
                         <div class="page-header" id="archives">
                             <h4>技术是什么</h4>
                         </div>
-                        <p>可以吃吗</p>
+                        <p>可以吃吗？</p>
                     </div>
             </div>
         </div>
