--- a/_includes/archives.html
+++ b/_includes/archives.html
@@ -53,7 +53,7 @@
                             <h4><strong>这就是生活</strong></h4>
                         </div>
                         <p>C' est La Vie!</p>
-                      <a href="/_posts/Aloha.md">
+                      <a href="/%E6%8A%80%E6%9C%AF%E6%98%AF%E4%BB%80%E4%B9%88/2019/06/07/Aloha.html">
           <span class="badge badge-secondary">Aloha</span>
         </a>
         <br>
