--- a/_includes/archives.html
+++ b/_includes/archives.html
@@ -55,9 +55,9 @@
                         <p>C' est La Vie!</p>
                            <li class="ant-timeline-item">
                                 <div class="ant-timeline-item-content">
-                                    <span class="badge badge-danger">{{ post.date | date: "%Y-%m-%d" }} </span>
+                                    <span class="badge badge-danger">2019-06-07 </span>
                                     <div class="d-flex align-items-center post-title">
-                                     <a class="post-link text-danger h5 text-danger" href="{{site.url}}{{site.baseurl}}{{ post.url}}/tech">{{ post.title }}</a>
+                                     <a class="post-link text-danger h5 text-danger" href="/%E6%8A%80%E6%9C%AF%E6%98%AF%E4%BB%80%E4%B9%88/2019/06/07/Aloha.html">Aloha</a>
                                     </div>
                                 </div>
                             </li>
