--- a/_includes/archives.html
+++ b/_includes/archives.html
@@ -50,9 +50,9 @@
                     </div>
                     <div class="col-md-4 col-sm-12">
                         <div class="page-header" id="archives">
-                            <h4><strong>这就是生活</strong></h4>
+                            <h4><strong>这就是生活</strong><p>C' est La Vie!</p></h4>
                         </div>
-                        <p>C' est La Vie!</p>
+                        
                            <li class="ant-timeline-item">
                                 <div class="ant-timeline-item-content">
                                     <span class="badge badge-danger">2019-06-07 </span>
