--- a/_includes/archives.html
+++ b/_includes/archives.html
@@ -62,9 +62,9 @@
                                 </div>
                             </li>
                         <div class="page-header" id="archives">
-                            <h4><strong>技术是什么</strong></h4>
+                            <h4><strong>技术是什么</strong><p>可以吃吗？</p></h4>
                         </div>
-                        <p>可以吃吗？</p>
+                        
                     </div>
             </div>
         </div>
