--- a/_includes/archives.html
+++ b/_includes/archives.html
@@ -4,7 +4,7 @@
                 <div class="row">
                     <div class="col-md-8 col-sm-12">
                         <div class="page-header" id="archives">
-                            <h3 class="d-inline"><strong>Alpha Lab</strong></h3>
+                            <h3 class="d-inline"><strong>生活的奇点</strong><p>Alpha Lab</p></h3>
                             <input type="text" class="d-inline form-control ml-3 w-50" id="post-search" placeholder="Press enter to search..." autocomplete="off">
                         </div>
                         <ul class="ant-timeline" id="archivelist">
