--- a/_includes/archives.html
+++ b/_includes/archives.html
@@ -62,7 +62,7 @@
                                 </div>
                             </li>
                         <div class="page-header" id="archives">
-                            <h4><strong>技术是什么</strong><p>Is that edible?</p></h4>
+                            <h4><strong>技术是什么</strong><p>Is That Edible?</p></h4>
                         </div>
                         
                     </div>
