--- a/_includes/archives.html
+++ b/_includes/archives.html
@@ -4,7 +4,7 @@
                 <div class="row">
                     <div class="col-md-8 col-sm-12">
                         <div class="page-header" id="archives">
-                            <h3 class="d-inline"><strong>它是个奇点</strong><p>Alpha Lab</p></h3>
+                            <h3 class="d-inline"><strong>所有文章</strong></h3>
                             <input type="text" class="d-inline form-control ml-3 w-50" id="post-search" placeholder="Press enter to search..." autocomplete="off">
                         </div>
                         <ul class="ant-timeline" id="archivelist">
@@ -50,7 +50,7 @@
                     </div>
                     <div class="col-md-4 col-sm-12">
                         <div class="page-header" id="archives">
-                            <h4><strong>这就是生活</strong><p>C' est La Vie!</p></h4>
+                            <h4><strong>生活随笔</strong></h4>
                         </div>
                         
                            <li class="ant-timeline-item">
@@ -62,7 +62,7 @@
                                 </div>
                             </li>
                         <div class="page-header" id="archives">
-                            <h4><strong>技术是什么</strong><p>Is That Edible?</p></h4>
+                            <h4><strong>技术日志</strong></h4>
                         </div>
                         
                     </div>
