--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
           <tr><td>Dev Engine:</td><td>Ruby X GitHub</td></tr>
           <tr><td>Vi Director:</td><td>Bootstrap4</td></tr>   
           <tr><td>Co-Vi Director:</td><td>Stylish Portfolio</td></tr>
-          <tr><td>Framework From:</td><td>@szhshp</td></tr>
+          <tr><td>Framework:</td><td>Jekyll</td></tr>
           <tr><td>Background From:</td><td><a href="http://hubblesite.org"> hubblesite</a></td></tr>  
         </table>
          <p class="text-muted">Copyright &copy; {{ site.copyright }} 20{{ site.time | date: '%y' }}</p>
