--- a/_includes/archives.html
+++ b/_includes/archives.html
@@ -55,16 +55,20 @@
                         
                            <li class="ant-timeline-item">
                                 <div class="ant-timeline-item-content">
-                                    <span class="badge badge-danger">2019-06-07 </span>
+                                    <span class="badge badge-danger">2019-06-08 </span>
                                     <div class="d-flex align-items-center post-title">
-                                     <a class="post-link text-danger h5 text-danger" href="/%E6%8A%80%E6%9C%AF%E6%98%AF%E4%BB%80%E4%B9%88/2019/06/07/Aloha.html">Aloha</a>
+                                     <a class="post-link text-danger h5 text-danger" href="/%E7%94%9F%E6%B4%BB%E9%9A%8F%E7%AC%94/%E6%8A%80%E6%9C%AF%E6%97%A5%E5%BF%97/2019/06/08/Aloha.html">Aloha</a>
                                     </div>
                                 </div>
                             </li>
                         <div class="page-header" id="archives">
                             <h4><strong>技术日志</strong></h4>
                         </div>
-                        
+                         <li class="ant-timeline-item">
+                                <div class="ant-timeline-item-content">
+                                    <span class="badge badge-danger">2019-06-08 </span>
+                                    <div class="d-flex align-items-center post-title">
+                                     <a class="post-link text-danger h5 text-danger" href="/%E7%94%9F%E6%B4%BB%E9%9A%8F%E7%AC%94/%E6%8A%80%E6%9C%AF%E6%97%A5%E5%BF%97/2019/06/08/Aloha.html">Aloha</a>
                     </div>
             </div>
         </div>
