--- a/_includes/archives.html
+++ b/_includes/archives.html
@@ -89,6 +89,14 @@
                                      </div>
                                 </div>
                             </li>
+                       <li class="ant-timeline-item">
+                                <div class="ant-timeline-item-content">
+                                    <span class="badge badge-primary">2019-06-13 </span>
+                                    <div class="d-flex align-items-center post-title">
+                                        <a class="post-link h5 text-primary" href="/%E6%8A%80%E6%9C%AF%E6%97%A5%E5%BF%97/2019/06/13/%E9%80%9A%E8%BF%87Ansible-Playbook%E4%B8%8B%E5%8F%91%E9%85%8D%E7%BD%AE%E5%91%BD%E4%BB%A4%E5%88%B0%E5%8D%8E%E4%B8%BANE%E8%B7%AF%E7%94%B1%E5%99%A8.html">通过Ansible-Playbook下发配置命令到华为NE路由器</a>
+                                     </div>
+                                </div>
+                            </li>
                       
             </div>
         </div>
