--- a/_includes/archives.html
+++ b/_includes/archives.html
@@ -85,7 +85,7 @@
                                 <div class="ant-timeline-item-content">
                                     <span class="badge badge-primary">2019-06-10 </span>
                                     <div class="d-flex align-items-center post-title">
-                                        <a class="post-link h5 text-primary" href="/%E6%8A%80%E6%9C%AF%E6%97%A5%E5%BF%97/2019/06/10/%E9%80%9A%E8%BF%87Huawei_Ansible_Modules%E4%B8%8B%E5%8F%91%E9%85%8D%E7%BD%AE%E5%88%B0NE%E7%B3%BB%E5%88%97%E8%B7%AF%E7%94%B1%E5%99%A8.html">通过Huawei_Ansible_Modules下发配置到NE系列路由器</a>
+                                        <a class="post-link h5 text-primary" href="/%E6%8A%80%E6%9C%AF%E6%97%A5%E5%BF%97/2019/06/10/%E9%80%9A%E8%BF%87Huawei_Ansible_Modules%E4%B8%8B%E5%8F%91%E9%85%8D%E7%BD%AE%E5%88%B0NE%E7%B3%BB%E5%88%97%E8%B7%AF%E7%94%B1%E5%99%A8.html">通过HW_Ansible_Modules下发配置到NE系列路由器</a>
                                      </div>
                                 </div>
                             </li>
