--- a/_includes/archives.html
+++ b/_includes/archives.html
@@ -70,6 +70,14 @@
                                      </div>
                                 </div>
                             </li>
+                      <li class="ant-timeline-item">
+                                <div class="ant-timeline-item-content">
+                                    <span class="badge badge-primary">2019-06-15 </span>
+                                    <div class="d-flex align-items-center post-title">
+                                        <a class="post-link h5 text-primary" href="/%E7%94%9F%E6%B4%BB%E9%9A%8F%E7%AC%94/2019/06/15/%E6%96%B0%E7%8E%A9%E5%85%B7-Sony-1AM2.html">我的新玩具——Sony 1AM2</a>
+                                     </div>
+                                </div>
+                            </li>
                         <div class="page-header" id="archives">
                             <h4><strong>技术日志</strong></h4>
                         </div>
