--- a/_includes/archives.html
+++ b/_includes/archives.html
@@ -78,6 +78,15 @@
                                      </div>
                                 </div>
                             </li>
+                      <li class="ant-timeline-item">
+                                <div class="ant-timeline-item-content">
+                                    <span class="badge badge-primary">2019-06-16 </span>
+                                    <div class="d-flex align-items-center post-title">
+                                        <a class="post-link h5 text-primary" href="/%E7%94%9F%E6%B4%BB%E9%9A%8F%E7%AC%94/2019/06/16/%E5%9C%B0%E4%B9%85%E5%A4%A9%E9%95%BF%E5%A4%AA%E9%95%BF%E4%BA%86.html">地久天长太长了</a>
+                                     </div>
+                                </div>
+                            </li>
+                            
                         <div class="page-header" id="archives">
                             <h4><strong>技术日志</strong></h4>
                         </div>
