--- a/_includes/post.html
+++ b/_includes/post.html
@@ -12,6 +12,7 @@
                     </h1>
                     {{ page.date | date: "%Y-%m-%d" }}
                 </div>
+                <div><script src="{{site.url}}{{site.baseurl}}/js/bgm.js"></script></div>
                 {{ page.content | markdownify }}
 
                 <!-- don't delete this div, this is marked as the end position of collapse plugin  -->
