--- a/_includes/post.html
+++ b/_includes/post.html
@@ -12,7 +12,7 @@
                     </h1>
                     {{ page.date | date: "%Y-%m-%d" }}
                 </div>
-                <script src="{{site.url}}{{site.baseurl}}/js/bgm.js"></script>
+                 <embed src="http://music.163.com/style/swf/widget.swf?sid=29357673&amp;type=2&amp;auto=1&amp;width=320&amp;height=66" width="340" height="86" allownetworking="all" />
                 {{ page.content | markdownify }}
 
                 <!-- don't delete this div, this is marked as the end position of collapse plugin  -->
