--- a/_includes/post.html
+++ b/_includes/post.html
@@ -12,7 +12,7 @@
                     </h1>
                     {{ page.date | date: "%Y-%m-%d" }}
                 </div>
-                 <embed src="http://music.163.com/style/swf/widget.swf?sid=29357673&amp;type=2&amp;auto=1&amp;width=320&amp;height=66" width="340" height="86" allownetworking="all" />
+                 <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=509311810&auto=1&height=66"></iframe>
                 {{ page.content | markdownify }}
 
                 <!-- don't delete this div, this is marked as the end position of collapse plugin  -->
