--- a/_includes/post.html
+++ b/_includes/post.html
@@ -12,7 +12,7 @@
                     </h1>
                     {{ page.date | date: "%Y-%m-%d" }}
                 </div>
-                <div id="bgm"></div>
+                <div id="bgm">
         <script>
           (function(){
     arrMusicID = [1091088,27471609,26875199,27723552,26090100,26090100,26193921,501467597,19282045,306709,5299097,27471615,31062378,139443];  //musicID array
@@ -33,7 +33,7 @@
     iframe.height=52;
     document.body.appendChild(iframe);
 });
-        </script>
+        </script></div>
                 {{ page.content | markdownify }}
 
                 <!-- don't delete this div, this is marked as the end position of collapse plugin  -->
