--- a/_includes/post.html
+++ b/_includes/post.html
@@ -20,18 +20,7 @@
     $('body').css('height',document.documentElement.clientHeight -5);
 
     if (!Number.isInteger(arrMusicID[musicID])) return; // load failed, bye~
-
-    var iframe = document.createElement('iframe');
-    iframe.id="bgm";
-    iframe.style = "position: absolute;";
-    iframe.src = '//music.163.com/outchain/player?type=2&id=' +arrMusicID[musicID]+ '&auto=1&height=32';
-    console.log(iframe.src)
-    iframe.frameborder="no";
-    iframe.marginwidth="0";
-    iframe.marginheight="0";
-    iframe.width=250;
-    iframe.height=52;
-    document.body.appendChild(iframe);
+    <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=' +arrMusicID[musicID]+ '&auto=1&height=66"></iframe>
 });
         </script></div>
                 {{ page.content | markdownify }}
