--- a/_includes/post.html
+++ b/_includes/post.html
@@ -13,22 +13,7 @@
                     {{ page.date | date: "%Y-%m-%d" }}
                 </div>
                 <p id="bgm"></p>
-<script>
-function  Funtion(){
-  arrMusicID = [1091088,27471609,26875199,27723552,26090100,26090100,26193921,501467597,19282045,306709,5299097,27471615,31062378,139443];  //musicID array
-  musicID = Math.floor(Math.random()*(arrMusicID.length)) //get a ran num as index
-  $('body').css('height',document.documentElement.clientHeight -5);
-  if (!Number.isInteger(arrMusicID[musicID])) return; // load failed, bye~  
-  var iframe = document.createElement('iframe');
-  iframe.id="bgm";
-  iframe.style = "position: absolute;";
-  iframe.src = '//music.163.com/outchain/player?type=2&id=' +arrMusicID[musicID]+ '&auto=1&height=32';
-  console.log(iframe.src)
-  iframe.width=250;
-  iframe.height=52;
-  document.body.appendChild(iframe);
-}
-</script>
+<script src="{{site.url}}{{site.baseurl}}/js/bgm.js" type="text/javascript"></script>
                 {{ page.content | markdownify }}
 
                 <!-- don't delete this div, this is marked as the end position of collapse plugin  -->
