--- a/_includes/archives.html
+++ b/_includes/archives.html
@@ -109,6 +109,14 @@
                             <h4><strong>技术日志</strong></h4>
                         </div>
                      
+                      <li class="ant-timeline-item">
+                                <div class="ant-timeline-item-content">
+                                    <span class="badge badge-primary">2019-08-20 </span>
+                                    <div class="d-flex align-items-center post-title">
+                                        <a class="post-link h5 text-primary" href="/%E6%8A%80%E6%9C%AF%E6%97%A5%E5%BF%97/2019/08/20/Centos7%E9%83%A8%E7%BD%B2FTP%E6%9C%8D%E5%8A%A1.html">CeotOS7部署FTP服务</a>
+                                     </div>
+                                </div>
+                            </li>
                          <li class="ant-timeline-item">
                                 <div class="ant-timeline-item-content">
                                     <span class="badge badge-danger">2019-06-08 </span>
