--- a/_includes/archives.html
+++ b/_includes/archives.html
@@ -108,6 +108,15 @@
                         <div class="page-header" id="archives">
                             <h4><strong>技术日志</strong></h4>
                         </div>
+                      
+                       <li class="ant-timeline-item">
+                                <div class="ant-timeline-item-content">
+                                    <span class="badge badge-primary">2019-09-09 </span>
+                                    <div class="d-flex align-items-center post-title">
+                                        <a class="post-link h5 text-primary" href="/%E6%8A%80%E6%9C%AF%E6%97%A5%E5%BF%97/2019/09/09/pip3%E5%8D%87%E7%BA%A7%E7%9A%84%E4%B8%80%E4%B8%AA%E7%BB%86%E8%8A%82.html">PIP3升级的一个细节</a>
+                                     </div>
+                                </div>
+                            </li>
                      
                       <li class="ant-timeline-item">
                                 <div class="ant-timeline-item-content">
