--- a/_includes/archives.html
+++ b/_includes/archives.html
@@ -105,6 +105,15 @@
                                 </div>
                             </li>
                       
+                       <li class="ant-timeline-item">
+                                <div class="ant-timeline-item-content">
+                                    <span class="badge badge-primary">2019-09-17 </span>
+                                    <div class="d-flex align-items-center post-title">
+                                        <a class="post-link h5 text-primary" href="/%E7%94%9F%E6%B4%BB%E9%9A%8F%E7%AC%94/2019/09/17/%E5%B0%BE%E5%A3%B0%E5%95%A6-%E5%A4%8F%E5%A4%A9.html">尾声啦，夏天</a>
+                                     </div>
+                                </div>
+                            </li>
+                      
                         <div class="page-header" id="archives">
                             <h4><strong>技术日志</strong></h4>
                         </div>
